--- a/ret2pix.html
+++ b/ret2pix.html
@@ -5,11 +5,12 @@
     <style>
       html, body {
         margin: 0;
+        overflow: hidden;
       }
       .bg-blend {
         background-image: url("mean-face.png");
         background-blend-mode: multiply;
-        background-size: cover;
+        background-size: 100% 100%;
       }
       img {
         mix-blend-mode: color;
